# KotML

./: .cursorrules  CMakeLists.txt  README.md  README_LOSS.md  README_SGD.md
docs/: csv_datasets.md  loss_functions.md  sgd_optimizer.md  training_guide.md
docs/kotml_obs/: Activations.md  Automatic Differentiation.md  Basic Examples.md  Basic Operations.md  Layers.md  Neural Networks Overview.md  Optimizers Overview.md  README.md  Tensor Operations.md  Tensor Overview.md
docs/kotml_obs/.obsidian/: workspace.json
examples/: CMakeLists.txt  SEQUENTIAL_USAGE.md  basic_usage.cpp  csv_example.cpp  dataloader_example.cpp  ffn_classification.cpp  ffn_demo.cpp  ffn_vs_sequential.cpp  layers_demo.cpp  linear_regression_example.cpp  loss_example.cpp  optimization_test.cpp  optimizer_comparison.cpp  progress_bar_demo.cpp  sequential_demo.cpp  sequential_simple.cpp  sgd_example.cpp  simple_autograd.cpp  simple_linear_test.cpp  training_example.cpp
include/kotml/: kotml.hpp  tensor.hpp
include/kotml/data/: data.hpp  dataloader.hpp  dataset.hpp
include/kotml/nn/: activation_layer.hpp  activations.hpp  dropout_layer.hpp  ffn.hpp  input_layer.hpp  layers.hpp  linear_layer.hpp  loss.hpp  module.hpp  output_layer.hpp  sequential.hpp
include/kotml/ops/: basic.hpp  linalg.hpp  reduction.hpp
include/kotml/optim/: adam.hpp  optimizer.hpp  sgd.hpp
include/kotml/utils/: helpers.hpp  progress_bar.hpp
src/: tensor.cpp
src/data/: dataloader.cpp  dataset.cpp
src/nn/: activation_layer.cpp  activations.cpp  dropout_layer.cpp  ffn.cpp  input_layer.cpp  layers.cpp  linear_layer.cpp  loss.cpp  module.cpp  output_layer.cpp  sequential.cpp
src/ops/: basic.cpp  linalg.cpp  reduction.cpp
src/optim/: adam.cpp  sgd.cpp
src/utils/: helpers.cpp  progress_bar.cpp
tests/: CMakeLists.txt  README_NN_TESTS.md  test_ffn.cpp  test_ffn_vs_sequential.cpp  test_optimizers.cpp  test_sequential.cpp  test_simple.cpp  test_tensor_arithmetic.cpp  test_tensor_autograd.cpp  test_tensor_basic.cpp  test_tensor_linalg.cpp  test_tensor_reduction.cpp
